# fluent_result

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: Publish.yml  audit.yml  build.yml  cd.yml  coverage.yml  docs.yml  publish.yml
src/: bool.rs  expect_none.rs  handle_err.rs  internal.rs  into_err.rs  into_ok.rs  into_ok_or_panic.rs  into_some.rs  lib.rs  log_err.rs  map_to.rs  ok_or_panic.rs  or_err.rs  sink.rs  sink_err.rs  then_none.rs  unwrap_never.rs  unwrap_ok.rs  unwrap_result.rs
src/bool/: expect.rs  mod.rs  then.rs  then_err.rs
src/expect/: expect_none.rs  mod.rs  unwrap_never.rs
src/into/: into_err.rs  into_none.rs  into_ok.rs  into_option.rs  into_result.rs  into_some.rs  mod.rs
src/log/: inspect_err_log.rs  inspect_log.rs  log_err.rs  mod.rs  ok_log.rs  option_tap_log.rs  result_tap_log.rs  tap_log.rs  tap_option_log.rs  tap_result_log.rs
src/map/: mod.rs  option_map_to.rs  result_map_err_to.rs  result_map_to.rs
src/nested/: box_err.rs  flatten_err.rs  mod.rs
src/sink/: mod.rs  sink_option.rs  sink_result.rs
tests/: bool-expect.rs  bool-then.rs  bool_extensions.rs  box-err.rs  expect-none.rs  flatten-err.rs  into_conversions.rs  result-into.rs  sink.rs  unwrap-never.rs  unwrap_never.rs
