[package]
name = "fluent_result"
version = "0.5.0"
edition = "2024"
authors = ["Austin Stanley <maxtmahem@gmail.com>"]
description = "Fluent postfix helpers for Rust's Result and Option types"
license = "MIT"
repository = "https://github.com/maxtmahem/fluent_result"
documentation = "https://maxmahem.github.io/fluent_result/fluent_result/index.html"
readme = "README.md"
keywords = ["result", "option", "fluent", "postfix", "error-handling"]
categories = ["rust-patterns", "development-tools", "data-structures"]

[features]
default = []
tracing = ["dep:tracing"]

[dependencies]
tracing = { version = "0.1", optional = true }

[dev-dependencies]
fluent_result = { path = ".", features = ["tracing"] }
tracing-subscriber = "0.3.20"

