[package]
name = "fluent_result"
version = "0.9.1"
edition = "2024"
rust-version = "1.85.1"
authors = ["Austin Stanley <maxtmahem@gmail.com>"]
description = "Fluent postfix helpers for Rust's Result and Option types"
license = "MIT OR Apache-2.0"
repository = "https://github.com/maxtmahem/fluent_result"
documentation = "https://maxmahem.github.io/fluent_result/fluent_result/index.html"
readme = "README.md"
keywords = ["result", "option", "fluent", "postfix", "error-handling"]
categories = ["rust-patterns", "development-tools", "data-structures"]

[features]
default = ["alloc"]
alloc = []

[dependencies]
derive_more = { version = "2.0.1", features = ["is_variant", "try_unwrap", "unwrap"] }
sealed = "0.6.0"

